feat(MainActivity): Added a MainActivity to start Settings activity and HomeActivity, to solve the wireless ADB pairing issue in TAL XPad 2&3 series.

--- a/manager/src/main/AndroidManifest.xml
+++ b/manager/src/main/AndroidManifest.xml
@@ -66,6 +66,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:localeConfig="@xml/locales_config"
+        android:resizeableActivity="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
@@ -92,6 +93,9 @@
         <activity
             android:name=".adb.AdbPairingTutorialActivity"
             android:label="@string/adb_pairing" />
+        <activity
+            android:name=".home.HomeActivity"
+            android:label="@string/home_root_button_start" />
         <activity
             android:name=".shell.ShellTutorialActivity"
             android:label="@string/home_terminal_title" />
