fix(manager): Use fake package name com.tal.pad.program to fix starting on boot with wireless debugging
伪装为“学而思编程”包名以解决无法使用开机启动(无线调试)的问题

Signed-off-by: public TALPAD BOOM <talpadboom@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,9 @@ subprojects {
 apply from: 'api/manifest.gradle'
 def gitCommitId = 'git rev-parse --short HEAD'.execute([], project.rootDir).text.trim()
 def gitCommitCount = Integer.parseInt('git rev-list --count HEAD'.execute([], project.rootDir).text.trim())
+def baseVersionCode = 350000000 + gitCommitCount
 def baseVersionName = "${api_version_major}.6.0-R4"
 ext {
-    versionCode = gitCommitCount
+    versionCode = baseVersionCode
     versionName = "${baseVersionName}.r${gitCommitCount}.${gitCommitId}"
 }
